--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "18"
   },
   "scripts": {
-    "start": "yarn migrate && node ./src/server.js",
+    "start": "yarn run migrate && node ./src/server.js",
     "dev": "nodemon ./src/server.js --ignore tests",
     "test": "jest ./test/routes.test.js --detectOpenHandles --forceExit",
     "migrate": "yarn knex migrate:latest"
